package ar.edu.utn.frba.dds.prenda;

public enum Trama {
  LISA,
  RAYADA,
  CON_LUNARES,
  A_CUADROS,
  ESTAMPADO
}
